<resources>
    <string name="app_name">ShoppingList</string>
    <string name="edit_message"></string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_items">Select Items</string>
    <string name="edit_items">Edit Item</string>
    <string name="clear">Clear</string>
    <string name="select_store">Select Store</string>
    <string name="import_file">Import</string>
    <string name="export_file">Export</string>

    <string name="enterFileName">Enter file name:</string>
    <string name="saveButtonText">Save</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="cannotSaveFileMessage">Cannot save file</string>
    <string name="fileNameFirstMessage">Please enter the file name first</string>
    <string name="okButtonText">OK</string>
    <string name="loadButtonText">Load</string>
    <string name="accessDenied">Access denied</string>
    <string name="missingFile">No such file</string>
    <string name="newFolderButtonText">New folder</string>
    <string name="newFolderDialogMessage">Create new folder</string>
    <string name="createButtonText">Create</string>
    <string name="folderCreationOk">Folder created sucessfully</string>
    <string name="folderCreationError">Error while creating folder</string>
    <string name="information">Information</string>

</resources>
