<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.qetuop.shoppinglist.MainActivity">

    <item
        android:id="@+id/clear_completed"
        android:icon="@drawable/abc_ic_menu_selectall_mtrl_alpha"
        android:title="@string/clear"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_select_store"
                android:title="@string/select_store" />
            <item
                android:id="@+id/menu_import"
                android:title="@string/import_file" />
            <item
                android:id="@+id/menu_export"
                android:title="@string/export_file" />
        </menu>
    </item>
</menu>
